--- a/index.html
+++ b/index.html
@@ -218,6 +218,8 @@
 
   <!-- SheetJS for Excel parsing (local copy for offline use) -->
   <script src="vendor/xlsx.full.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="config.js"></script>
   <script src="script.js" defer></script>
 </body>
 </html>
