--- a/index.html
+++ b/index.html
@@ -84,6 +84,47 @@
       z-index:6;
       backdrop-filter:blur(14px);
     }
+    .notes-cell{
+      text-align:left;
+      min-width:200px;
+      padding-inline:1.1rem;
+    }
+    .note-display{
+      margin-bottom:.35rem;
+      font-size:.9rem;
+      line-height:1.4;
+      word-break:break-word;
+    }
+    .note-placeholder{
+      color:var(--text-subtle);
+      font-style:italic;
+    }
+    .note-actions{
+      display:flex;
+      flex-wrap:wrap;
+      gap:.4rem;
+    }
+    .note-btn,
+    .manual-btn{
+      padding:.32rem .65rem;
+      border-radius:10px;
+      border:1px solid rgba(56,189,248,.45);
+      background:rgba(56,189,248,.12);
+      color:var(--accent);
+      font-size:.75rem;
+      font-weight:600;
+      letter-spacing:.05em;
+      text-transform:uppercase;
+      cursor:pointer;
+      transition:background .2s ease,border-color .2s ease,transform .18s ease;
+    }
+    .note-btn:hover{background:rgba(56,189,248,.18);}
+    .manual-btn{
+      border-color:rgba(74,222,128,.45);
+      background:rgba(74,222,128,.14);
+      color:#4ade80;
+    }
+    .manual-btn:hover{background:rgba(74,222,128,.22);}
     .auth-overlay{
       position:fixed;inset:0;background:rgba(2,6,23,.92);display:none;
       align-items:center;justify-content:center;z-index:999;
