--- a/index.html
+++ b/index.html
@@ -7,65 +7,69 @@
   <style>
     :root{
       color-scheme:dark;
-      --bg:#020617; --bg-alt:#0b1220; --card:rgba(15,23,42,.85);
-      --card-border:rgba(148,163,184,.18); --accent:#38bdf8; --accent-strong:#0ea5e9;
-      --text:#f8fafc; --text-subtle:#cbd5f5; --outline:rgba(56,189,248,.6);
-      --table-border:rgba(148,163,184,.16); --row-alt:rgba(30,41,59,.55);
-      --partial:rgba(251,191,36,.24); --partial-border:rgba(251,191,36,.55);
-      --complete:rgba(74,222,128,.22); --complete-border:rgba(34,197,94,.55);
-      --danger:rgba(248,113,113,.22); --danger-text:#fecaca;
+      --bg:#1a1b23; --bg-alt:#252732; --card:rgba(35,37,46,.9);
+      --card-border:rgba(132,142,160,.22); --accent:#58a6ff; --accent-strong:#1f6feb;
+      --text:#f7f7f9; --text-subtle:#c9ced8; --outline:rgba(88,166,255,.58);
+      --table-border:rgba(132,142,160,.18); --row-alt:rgba(48,50,60,.58);
+      --partial:rgba(214,188,67,.26); --partial-border:rgba(214,188,67,.58);
+      --complete:rgba(88,176,120,.26); --complete-border:rgba(60,156,100,.6);
+      --danger:rgba(185,70,70,.26); --danger-text:#f9b3b3;
     }
     *{box-sizing:border-box}
     body{
       margin:0;min-height:100vh;font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-      background:radial-gradient(circle at top, rgba(56,189,248,.18), transparent 40%),
-                 radial-gradient(circle at 20% 80%, rgba(59,130,246,.15), transparent 50%),
-                 linear-gradient(180deg,#020617 0%,#0f172a 45%,#111827 100%);
+      background:radial-gradient(circle at top, rgba(176,186,210,.18), transparent 48%),
+                 radial-gradient(circle at 25% 80%, rgba(140,148,168,.14), transparent 58%),
+                 linear-gradient(180deg,#1a1b23 0%,#21232d 45%,#272933 100%);
       color:var(--text);letter-spacing:.01em;
     }
     .app{max-width:1200px;margin:0 auto;padding:clamp(1.5rem,5vw,3.5rem) clamp(1rem,4vw,3.25rem) 4rem}
     header{text-align:center;margin-bottom:clamp(1.2rem,4vw,2rem)}
     header h1{margin:0;font-size:clamp(2.1rem,6vw,3.1rem);letter-spacing:.08em;text-transform:uppercase;color:var(--text);
-       text-shadow:0 16px 38px rgba(14,165,233,.35)}
+       text-shadow:0 16px 38px rgba(88,166,255,.28)}
     header p{margin:.7rem auto 0;max-width:62ch;font-size:clamp(1.05rem,3.2vw,1.2rem);line-height:1.6;color:var(--text-subtle)}
-    .auth-actions{margin-top:.9rem;display:flex;justify-content:center}
-    .logout-btn{
-      padding:.6rem 1rem;border-radius:12px;border:1px solid rgba(239,68,68,.55);
-      background:rgba(239,68,68,.16);color:#fecaca;font-weight:600;letter-spacing:.03em;
-      cursor:pointer;display:none;
+    .top-bar{
+      display:flex;
+      justify-content:flex-end;
+      margin-bottom:.5rem;
     }
-    .logout-btn:hover{background:rgba(239,68,68,.24)}
+    .logout-btn{
+      padding:.6rem 1.1rem;border-radius:12px;border:1px solid rgba(220,94,94,.6);
+      background:rgba(220,94,94,.28);color:#ffe5e5;font-weight:600;letter-spacing:.05em;
+      cursor:pointer;display:none;align-items:center;gap:.4rem;text-transform:uppercase;
+    }
+    .logout-btn:hover{background:rgba(220,94,94,.36)}
 
     /* Tabs */
     .tabs{display:flex;gap:.6rem;justify-content:center;margin:.8rem 0 1.2rem;flex-wrap:wrap}
     .tab-btn{
-      appearance:none;border:1px solid rgba(56,189,248,.35);background:rgba(15,23,42,.7);
+      appearance:none;border:1px solid rgba(88,166,255,.35);background:rgba(24,24,30,.78);
       color:var(--text);padding:.55rem 1rem;border-radius:.8rem;cursor:pointer;font-weight:700;letter-spacing:.02em;
       text-transform:uppercase;
     }
     .tab-btn[aria-selected="true"]{
-      background:linear-gradient(120deg,var(--accent),var(--accent-strong));border-color:rgba(14,165,233,.65)
+      background:linear-gradient(120deg,var(--accent),var(--accent-strong));border-color:rgba(88,166,255,.55)
     }
     .panel{display:none}
     .panel.active{display:block}
 
     /* Card & controls */
     .card{background:var(--card);border-radius:22px;border:1px solid var(--card-border);
-      box-shadow:0 28px 60px rgba(2,6,23,.5);backdrop-filter:blur(22px);padding:clamp(1.2rem,5vw,2.2rem);margin-bottom:1rem}
+      box-shadow:0 28px 60px rgba(0,0,0,.55);backdrop-filter:blur(22px);padding:clamp(1.2rem,5vw,2.2rem);margin-bottom:1rem}
     .controls{display:grid;gap:clamp(.8rem,2.2vw,1.1rem)}
     .file-input,.scanner-input,.clear-btn,.report-btn{
       width:100%;font-size:1.05rem;padding:.9rem 1.1rem;border-radius:14px;border:1px solid transparent;
-      background:rgba(15,23,42,.7);color:var(--text);transition:transform .18s ease,box-shadow .18s ease,background .2s ease,border-color .2s ease;
+      background:rgba(24,24,30,.78);color:var(--text);transition:transform .18s ease,box-shadow .18s ease,background .2s ease,border-color .2s ease;
       text-align:center;font-weight:600;letter-spacing:.02em;text-transform:uppercase;cursor:pointer;
     }
-    .file-input,.scanner-input{border-color:rgba(148,163,184,.3);background:rgba(15,23,42,.9);box-shadow:inset 0 1px 0 rgba(255,255,255,.04)}
-    .scanner-input::placeholder{color:rgba(148,163,184,.7)}
-    .clear-btn{background:var(--danger);border-color:rgba(248,113,113,.45);color:var(--danger-text)}
-    .report-btn{background:rgba(56,189,248,.12);border-color:rgba(56,189,248,.45);color:var(--accent)}
+    .file-input,.scanner-input{border-color:rgba(122,128,144,.35);background:rgba(18,18,24,.92);box-shadow:inset 0 1px 0 rgba(255,255,255,.04)}
+    .scanner-input::placeholder{color:rgba(140,146,160,.7)}
+    .clear-btn{background:var(--danger);border-color:rgba(185,70,70,.5);color:var(--danger-text)}
+    .report-btn{background:rgba(88,166,255,.14);border-color:rgba(88,166,255,.45);color:var(--accent)}
     .file-meta{font-size:.9rem;color:var(--text-subtle);text-align:center;margin-top:.2rem}
     .admin-targets{display:flex;flex-wrap:wrap;gap:.5rem;margin-top:.4rem}
-    .admin-targets label{display:flex;align-items:center;gap:.35rem;padding:.45rem .6rem;border:1px solid rgba(148,163,184,.28);
-      border-radius:10px;background:rgba(15,23,42,.65);font-size:.9rem;cursor:pointer}
+    .admin-targets label{display:flex;align-items:center;gap:.35rem;padding:.45rem .6rem;border:1px solid rgba(124,132,150,.3);
+      border-radius:10px;background:rgba(28,28,34,.7);font-size:.9rem;cursor:pointer}
     .admin-targets input[type="checkbox"]{width:16px;height:16px;cursor:pointer}
     body.auth-locked{overflow:hidden}
     body.auth-locked .app{filter:blur(6px);pointer-events:none;user-select:none}
@@ -73,9 +77,9 @@
       margin:.9rem 0 0;
       padding:1rem 1.1rem;
       border-radius:16px;
-      border:1px solid rgba(56,189,248,.35);
-      background:rgba(15,23,42,.92);
-      box-shadow:0 18px 32px rgba(2,6,23,.45);
+      border:1px solid rgba(120,130,150,.32);
+      background:rgba(22,23,30,.94);
+      box-shadow:0 18px 32px rgba(5,6,10,.55);
       font-size:1.05rem;
       letter-spacing:.015em;
       display:none;
@@ -104,12 +108,39 @@
       flex-wrap:wrap;
       gap:.4rem;
     }
+    .run-filter-group{
+      display:flex;
+      flex-direction:column;
+      gap:.35rem;
+      text-align:left;
+    }
+    .run-filter-group label{
+      font-size:.72rem;
+      letter-spacing:.18em;
+      text-transform:uppercase;
+      color:var(--text-subtle);
+    }
+    .run-filter{
+      appearance:none;
+      width:100%;
+      padding:.65rem .8rem;
+      border-radius:12px;
+      border:1px solid rgba(132,142,160,.32);
+      background:rgba(24,24,30,.92);
+      color:var(--text);
+      font-size:.95rem;
+      letter-spacing:.02em;
+    }
+    .run-filter:disabled{
+      opacity:.6;
+      cursor:not-allowed;
+    }
     .note-btn,
     .manual-btn{
       padding:.32rem .65rem;
       border-radius:10px;
-      border:1px solid rgba(56,189,248,.45);
-      background:rgba(56,189,248,.12);
+      border:1px solid rgba(88,166,255,.45);
+      background:rgba(88,166,255,.12);
       color:var(--accent);
       font-size:.75rem;
       font-weight:600;
@@ -118,21 +149,78 @@
       cursor:pointer;
       transition:background .2s ease,border-color .2s ease,transform .18s ease;
     }
-    .note-btn:hover{background:rgba(56,189,248,.18);}
+    .note-btn:hover{background:rgba(88,166,255,.18);}
     .manual-btn{
       border-color:rgba(74,222,128,.45);
       background:rgba(74,222,128,.14);
       color:#4ade80;
     }
     .manual-btn:hover{background:rgba(74,222,128,.22);}
+    .status-card{
+      margin-top:.85rem;
+      padding:1rem 1.1rem;
+      border-radius:14px;
+      border:1px solid rgba(122,132,150,.28);
+      background:rgba(20,21,27,.9);
+      box-shadow:inset 0 1px 0 rgba(255,255,255,.03);
+      display:grid;
+      gap:.55rem;
+    }
+    .status-row{
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      font-size:.95rem;
+      letter-spacing:.01em;
+    }
+    .status-label{
+      text-transform:uppercase;
+      font-size:.72rem;
+      letter-spacing:.24em;
+      color:var(--text-subtle);
+    }
+    .status-value{
+      font-weight:700;
+      letter-spacing:.05em;
+    }
+    .status-route{
+      font-size:2.4rem;
+      font-weight:700;
+      letter-spacing:.22em;
+      text-align:center;
+      text-transform:uppercase;
+      color:var(--accent);
+    }
+    .status-route--missing{
+      font-size:1.05rem;
+      color:var(--danger-text);
+      letter-spacing:.08em;
+    }
+    .status-meta{
+      text-align:center;
+      font-size:.95rem;
+      letter-spacing:.05em;
+      color:var(--text-subtle);
+    }
+    .status-progress{
+      display:inline-block;
+      margin-left:.45rem;
+      font-size:1.05rem;
+      font-weight:700;
+      color:var(--text);
+      letter-spacing:.08em;
+    }
+    .admin-targets{
+      display:block;
+    }
     .auth-overlay{
-      position:fixed;inset:0;background:rgba(2,6,23,.92);display:none;
+      position:fixed;inset:0;background:rgba(11,12,15,.92);display:none;
       align-items:center;justify-content:center;z-index:999;
     }
     .auth-overlay.show{display:flex}
     .auth-card{
-      background:rgba(15,23,42,.95);border-radius:22px;border:1px solid rgba(148,163,184,.22);
-      box-shadow:0 32px 70px rgba(2,6,23,.65);padding:2.2rem;min-width:280px;max-width:360px;
+      background:rgba(24,24,32,.95);border-radius:22px;border:1px solid rgba(122,132,150,.28);
+      box-shadow:0 32px 70px rgba(0,0,0,.58);padding:2.2rem;min-width:280px;max-width:360px;
       display:grid;gap:1rem;font-size:1rem;color:var(--text);
     }
     .auth-card h2{margin:0;font-size:1.4rem;text-align:center;letter-spacing:.04em}
@@ -143,7 +231,7 @@
     }
     .auth-error{color:#fca5a5;font-size:.9rem;display:none;text-align:center}
     .auth-card button{
-      margin-top:.5rem;padding:.75rem 1rem;border-radius:12px;border:1px solid rgba(56,189,248,.55);
+      margin-top:.5rem;padding:.75rem 1rem;border-radius:12px;border:1px solid rgba(88,166,255,.55);
       background:linear-gradient(120deg,var(--accent),var(--accent-strong));color:#0f172a;
       font-size:1rem;font-weight:700;cursor:pointer;
     }
@@ -154,7 +242,7 @@
       box-shadow:inset 0 1px 0 rgba(255,255,255,.05);overflow:hidden}
     .table-scroll{overflow:auto;-webkit-overflow-scrolling:touch}
     table{width:100%;min-width:760px;border-collapse:collapse;color:inherit}
-    thead{background:linear-gradient(120deg, rgba(56,189,248,.22), rgba(14,165,233,.15))}
+    thead{background:linear-gradient(120deg, rgba(88,166,255,.22), rgba(31,111,235,.18))}
     th,td{padding:.75rem 1rem;text-align:center;border-bottom:1px solid var(--table-border);font-size:.95rem}
     tbody tr:nth-child(odd){background:var(--row-alt)}
     tbody tr:last-child td{border-bottom:none}
@@ -168,17 +256,15 @@
 </head>
 <body>
   <div class="app">
+    <div class="top-bar">
+      <button id="auth_logout" class="logout-btn" type="button">Logout</button>
+    </div>
     <header>
       <h1>Delivery Run Manager</h1>
-      <p>Upload your manifest(s) and scan consignments.</p>
-      <div class="auth-actions">
-        <button id="auth_logout" class="logout-btn" type="button">Logout</button>
-      </div>
     </header>
 
     <div class="tabs" role="tablist" aria-label="Marking Views">
       <button id="tab-final" class="tab-btn" role="tab" aria-selected="true" aria-controls="panel-final">Final Marking</button>
-      <button id="tab-glue" class="tab-btn" role="tab" aria-selected="false" aria-controls="panel-glue">Glueline Marking</button>
       <button id="tab-admin" class="tab-btn" role="tab" aria-selected="false" aria-controls="panel-admin" style="display:none;">Admin</button>
     </div>
 
@@ -186,36 +272,22 @@
     <section id="panel-final" class="panel active" role="tabpanel" aria-labelledby="tab-final">
       <section class="card" aria-label="Final Marking controls">
         <div class="controls">
-          <!-- multiple files now supported -->
           <input type="file" id="final_file" class="file-input" accept=".xlsx,.xls" multiple />
           <div class="file-meta" id="final_file_meta">No runsheet loaded.</div>
+          <div class="run-filter-group">
+            <label for="final_run_filter">Run filter</label>
+            <select id="final_run_filter" class="run-filter" disabled>
+              <option value="all">All runs</option>
+            </select>
+          </div>
           <input type="text" id="final_scan" class="scanner-input" placeholder="Scan or enter barcode" disabled
                  autocomplete="off" autocapitalize="none" autocorrect="off" spellcheck="false" enterkeyhint="go">
           <div class="clear-btn" id="final_clear" tabindex="0">Clear Final</div>
           <div class="report-btn" id="final_export" tabindex="0">Send Final Report</div>
         </div>
-        <!-- Final status injected -->
       </section>
+      <div id="final_scanned_summary" class="scanned-summary"></div>
       <div id="final_table" class="table-wrapper"><div class="table-scroll"></div></div>
-    </section>
-
-    <!-- Glueline Marking Panel -->
-    <section id="panel-glue" class="panel" role="tabpanel" aria-labelledby="tab-glue">
-      <section class="card" aria-label="Glueline Marking controls">
-        <div class="controls">
-          <!-- multiple files now supported -->
-          <input type="file" id="glue_schedule_file" class="file-input" accept=".xlsx,.xls" />
-          <div class="file-meta" id="glue_schedule_meta">No production schedule loaded.</div>
-          <input type="text" id="glue_scan" class="scanner-input" placeholder="Scan or enter barcode" disabled
-                 autocomplete="off" autocapitalize="none" autocorrect="off" spellcheck="false" enterkeyhint="go">
-          <div class="clear-btn" id="glue_clear" tabindex="0">Clear Glueline</div>
-          <div class="report-btn" id="glue_export" tabindex="0">Send Glueline Report</div>
-          <div class="report-btn" id="glue_filter_clear" tabindex="0" style="display:none;">Show All Orders</div>
-        </div>
-        <!-- Glueline status injected -->
-      </section>
-      <div id="glue_scanned_summary" class="scanned-summary"></div>
-      <div id="glue_schedule_table" class="table-wrapper"><div class="table-scroll"></div></div>
     </section>
 
     <section id="panel-admin" class="panel" role="tabpanel" aria-labelledby="tab-admin">
@@ -223,10 +295,12 @@
         <div class="controls">
           <input type="file" id="admin_upload" class="file-input" accept=".xlsx,.xls" />
           <div class="file-meta" id="admin_meta">No shared manifest uploaded.</div>
-          <div class="report-btn" id="admin_push_final" tabindex="0">Push to Final</div>
-          <div class="report-btn" id="admin_push_glue" tabindex="0">Push to Glueline</div>
-          <div class="admin-targets" id="admin_targets"></div>
-          <div class="admin-targets" id="admin_targets"></div>
+          <div class="run-filter-group">
+            <label for="admin_target_select">Deliver to</label>
+            <div class="admin-targets" id="admin_targets"></div>
+          </div>
+          <div class="report-btn" id="admin_push_final" tabindex="0">Push to Depot</div>
+          <div class="report-btn" id="admin_push_all" tabindex="0">Push to All Depots</div>
         </div>
         <div id="admin_preview" class="table-wrapper"><div class="table-scroll"></div></div>
       </section>
