--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Delivery Run Manager — Final & Glueline Marking</title>
+  <title>Delivery Run Manager — Final Marking</title>
   <style>
     :root{
       color-scheme:dark;
