--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
     </form>
   </div>
 
-  <!-- SheetJS for Excel parsing (local copy for offline use) -->
-  <script src="vendor/xlsx.full.min.js" defer></script>
+  <!-- SheetJS for Excel parsing -->
+  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="config.js"></script>
   <script src="script.js" defer></script>
