--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     .top-bar{
       display:flex;
       justify-content:flex-end;
+      align-items:center;
+      gap:.6rem;
+      flex-wrap:wrap;
       margin-bottom:.5rem;
     }
     .logout-btn{
@@ -191,10 +194,18 @@
       text-transform:uppercase;
       color:var(--accent);
     }
+    .status-card--glueline .status-route{
+      font-size:clamp(8rem, 16vw, 12rem);
+      letter-spacing:.38em;
+    }
     .status-route--missing{
       font-size:1.05rem;
       color:var(--danger-text);
       letter-spacing:.08em;
+    }
+    .status-card--glueline .status-route--missing{
+      font-size:clamp(2.4rem, 6vw, 3.8rem);
+      letter-spacing:.24em;
     }
     .status-meta{
       text-align:center;
@@ -209,6 +220,121 @@
       font-weight:700;
       color:var(--text);
       letter-spacing:.08em;
+    }
+    .status-card--glueline .status-row{
+      flex-direction:column;
+      gap:.4rem;
+      align-items:center;
+      justify-content:center;
+    }
+    .status-card--glueline .status-label{
+      font-size:1rem;
+      letter-spacing:.3em;
+    }
+    .status-card--glueline .status-value{
+      font-size:2.6rem;
+      letter-spacing:.12em;
+    }
+    .card.glueline-condensed{
+      display:flex;
+      flex-wrap:wrap;
+      gap:1.5rem;
+      align-items:flex-start;
+    }
+    .card.glueline-condensed .controls{
+      flex:1 1 360px;
+      display:grid;
+      grid-template-columns:1fr;
+    }
+    .card.glueline-condensed .status-card{
+      margin-top:0;
+      width:100%;
+      order:2;
+    }
+    .card.glueline-condensed .scanned-summary{
+      flex:1 1 100%;
+    }
+    .glueline-log{
+      flex:0 0 320px;
+      max-width:360px;
+      border-radius:16px;
+      border:1px solid rgba(148,163,184,.24);
+      background:rgba(20,26,36,.85);
+      box-shadow:inset 0 1px 0 rgba(255,255,255,.05);
+      padding:1rem 1.1rem;
+      max-height:460px;
+      overflow:auto;
+    }
+    .glueline-log-title{
+      font-size:.95rem;
+      font-weight:700;
+      letter-spacing:.18em;
+      text-transform:uppercase;
+      margin-bottom:.8rem;
+      color:var(--text-subtle);
+    }
+    .glueline-log-body{
+      display:flex;
+      flex-direction:column;
+      gap:.65rem;
+    }
+    .glueline-log-entry{
+      border-radius:12px;
+      border:1px solid rgba(88,166,255,.18);
+      background:rgba(15,25,38,.75);
+      padding:.65rem .75rem;
+    }
+    .glueline-log-row{
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      font-size:.9rem;
+      font-weight:600;
+      letter-spacing:.04em;
+      color:var(--text);
+      margin-bottom:.35rem;
+    }
+    .glueline-log-time{
+      font-size:.8rem;
+      color:var(--text-subtle);
+      letter-spacing:.08em;
+    }
+    .glueline-log-meta{
+      font-size:.82rem;
+      letter-spacing:.05em;
+      color:var(--text-subtle);
+      margin-bottom:.25rem;
+    }
+    .glueline-log-code{
+      font-size:.95rem;
+      font-weight:700;
+      letter-spacing:.08em;
+      color:var(--accent);
+      word-break:break-all;
+    }
+    .glueline-log-empty{
+      font-size:.85rem;
+      letter-spacing:.05em;
+      color:var(--text-subtle);
+    }
+    .glueline-clear-btn{
+      width:auto!important;
+      padding:.6rem 1.1rem;
+      border-radius:12px;
+      border:1px solid rgba(220,94,94,.6);
+      background:rgba(220,94,94,.28);
+      color:#ffe5e5;
+      font-weight:600;
+      letter-spacing:.05em;
+      cursor:pointer;
+      display:inline-flex;
+      align-items:center;
+      gap:.35rem;
+      text-transform:uppercase;
+    }
+    .glueline-clear-btn:focus{
+      outline:2px solid rgba(220,94,94,.6);
+      outline-offset:2px;
     }
     .admin-targets{
       display:block;
@@ -305,6 +431,7 @@
         <div id="admin_reports_table" class="table-wrapper"><div class="table-scroll"></div></div>
       </section>
     </section>
+
   </div>
 
   <div id="auth_overlay" class="auth-overlay" role="dialog" aria-modal="true" aria-labelledby="auth_title">
