--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Delivery Run Manager â€” Final Marking</title>
+  <title>Delivery Run Manager - Final Marking</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -71,7 +71,7 @@
         <div class="controls">
           <input type="file" id="admin_upload" class="file-input" accept=".xlsx,.xls" />
           <div class="file-meta" id="admin_meta">No shared manifest uploaded.</div>
-          <div class="file-meta" id="admin_supabase_status">Checking Supabaseâ€¦</div>
+          <div class="file-meta" id="admin_supabase_status">Checking Supabase...</div>
           <div class="run-filter-group">
             <label for="admin_target_select">Deliver to</label>
             <div class="admin-targets" id="admin_targets">
@@ -106,9 +106,47 @@
         </div>
         <div id="admin_reports_table" class="table-wrapper"><div class="table-scroll"></div></div>
       </section>
+
+      <!-- New: Admin-only Create Account -->
+      <section class="card" aria-label="Create Account">
+        <div class="controls">
+          <div class="file-meta">Create a new user account. A verification email will be sent.</div>
+          <label>
+            Depot
+            <select id="admin_create_depot">
+              <option value="" disabled selected>Loading depots...</option>
+            </select>
+          </label>
+          <label>
+            Email
+            <input id="admin_create_email" type="email" placeholder="you@example.com" autocomplete="email">
+          </label>
+          <label>
+            Username
+            <input id="admin_create_username" type="text" placeholder="e.g. jdoe" autocomplete="off">
+          </label>
+          <label>
+            Full name
+            <input id="admin_create_fullname" type="text" placeholder="e.g. Jane Doe" autocomplete="name">
+          </label>
+          <label>
+            Password
+            <input id="admin_create_pass" type="password" placeholder="Minimum 8 characters" autocomplete="new-password">
+          </label>
+          <label>
+            Confirm password
+            <input id="admin_create_confirm" type="password" placeholder="Re-enter password" autocomplete="new-password">
+          </label>
+          <div id="admin_create_error" class="auth-error" role="alert" style="display:none;"></div>
+          <div class="auth-actions">
+            <button id="admin_create_submit" type="button">Create Account</button>
+          </div>
+        </div>
+      </section>
+
       <section class="card" aria-label="User Approvals">
         <div class="controls">
-          <div class="file-meta" id="admin_users_meta">Loading pending usersâ€¦</div>
+          <div class="file-meta" id="admin_users_meta">Loading pending users...</div>
         </div>
         <div id="admin_users_table" class="table-wrapper"><div class="table-scroll"></div></div>
       </section>
@@ -132,57 +170,7 @@
       </label>
       <div id="auth_error" class="auth-error" role="alert"></div>
       <button id="auth_login" type="submit">Sign In</button>
-      <div class="auth-alt-row">
-        <button id="auth_register_link" type="button" class="link-btn">Create account</button>
-      </div>
-    </form>
-  </div>
-  <!-- Registration overlay -->
-  <div id="reg_overlay" class="auth-overlay" aria-hidden="true">
-    <form id="reg_form" class="auth-card" aria-label="Create account form">
-      <h2>Create account</h2><label>
-      <h2>Create account</h2>
-      <label>
-        Depot
-        <select id="reg_depot" required>
-          <option value="" disabled selected>Loading depots…</option>
-        </select>
-      </label>
-        Email
-        <input id="reg_email" type="email" placeholder="you@example.com" autocomplete="email" required>
-      </label>
-      <label>
-        Username
-        <input id="reg_username" type="text" placeholder="e.g. jdoe" autocomplete="off" required>
-      </label>
-      <label>
-        Full name
-        <input id="reg_fullname" type="text" placeholder="e.g. Jane Doe" autocomplete="name" required>
-      </label>
-      <label>
-        Password
-        <input id="reg_pass" type="password" placeholder="Minimum 8 characters" autocomplete="new-password" required>
-      </label>
-      <label>
-        Confirm password
-        <input id="reg_confirm" type="password" placeholder="Re-enter password" autocomplete="new-password" required>
-      </label>
-      <div id="reg_error" class="auth-error" role="alert"></div>
-      <div class="auth-actions">
-        <button id="reg_cancel" type="button">Cancel</button>
-        <button id="reg_submit" type="submit">Request approval</button>
-      </div>
-      <p class="auth-note">Password must be at least 8 characters and include a capital letter or a special character.</p>
-      <div id="reg_code_section" style="display:none; margin-top:8px;">
-        <label>
-          Email verification code
-          <input id="reg_code" type="text" inputmode="numeric" pattern="[0-9]*" placeholder="Enter 6-digit code">
-        </label>
-        <div class="auth-actions" style="margin-top:6px;">
-          <button id="reg_verify_code" type="button">Verify Code</button>
-          <span id="reg_code_info" class="file-meta">We sent a 6-digit code to your email.</span>
-        </div>
-      </div>
+      <!-- Self-service registration removed; accounts are created by Admin -->
     </form>
   </div>
 
@@ -203,4 +191,3 @@
   <script src="js/script.js" defer></script>
 </body>
 </html>
-
